# shelltape

./: .gitignore  .rusty-hook.toml  Cargo.toml  OUTPUT_CAPTURE.md  POWERSHELL.md  README.md  USAGE.md  build.rs  flake.nix
.github/workflows/: ci.yml  packages.yml  release-from-run.yml  update-package-managers.yml
scripts/: install.ps1  install.sh  prepare-release.sh
shell-hooks/: bash.sh  fish.fish  powershell.ps1  zsh.sh
src/: clean.rs  cli.rs  export.rs  install.rs  list.rs  main.rs  models.rs  pty_capture.rs  recorder.rs  stats.rs  status.rs  storage.rs  uninstall.rs
src/tui/: app.rs  events.rs  mod.rs  ui.rs
