[package]
name = "shelltape"
version = "0.1.0"
edition = "2024"
authors = ["CaddyGlow"]
description = ""
readme = "README.md"
repository = "https://github.com/CaddyGlow/shelltape"
license = "MIT"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
dirs = "6.0"
ratatui = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.18", features = ["v4", "fast-rng"] }
